src/test/ui/parser/issue-43196.rs
fn main() {
    |
}
//~^ ERROR expected `|`, found `}`
|
//~^ ERROR expected item, found `|`
